Fix daily email overdue tasks, fix wrapping of long words, fix resize textare on doubleclick

--- a/app/assets/stylesheets/tasks.css.scss
+++ b/app/assets/stylesheets/tasks.css.scss
@@ -223,6 +223,7 @@
 
 .task_text {
 	white-space: pre-wrap;
+	word-wrap:break-word;
 }
 
 .task_text:hover {
